Fixed font scaling. Dividers now hide on mobile. Removed unneeded prefixes.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -180,9 +180,9 @@ body{
     width: 100%;
     height: 80vh;
     padding: 0;
-    -webkit-box-shadow: 0px 46px 51px -50px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 46px 51px -50px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 46px 51px -50px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0 46px 51px -50px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0 46px 51px -50px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 46px 51px -50px rgba(0, 0, 0, 0.75);
 }
 
 .grid:hover {
@@ -351,6 +351,10 @@ body{
     .section-content {
         padding: 0.5rem;
     }
+
+    body {
+        font-size: smaller;
+    }
 }
 
 @media screen and (max-width: 1023px) {
@@ -384,6 +388,10 @@ body{
 
     .grid:hover {
         overflow: hidden;
+    }
+
+    .divider {
+        display: none;
     }
 
 }
